--- a/BookListRazor/Pages/BookList/Index.cshtml
+++ b/BookListRazor/Pages/BookList/Index.cshtml
@@ -7,7 +7,7 @@
         <h2 class="text-info">Book List</h2>
     </div>
     <div class="col-3">
-        <a class="btn btn-info form-control text-white">Crate new book</a>
+        <a asp-page="Create"class="btn btn-info form-control text-white">Create new book</a>
     </div>
 
     <div class="col-12 border p-3 mt-3">
@@ -24,24 +24,31 @@
                             <label asp-for="Books.FirstOrDefault().Author"></label>
                         </th>
                         <th>
+                            @*@Html.DisplayNameFor(m=>m.Books.FirstOrDefault().Author)*@
+                            <label asp-for="Books.FirstOrDefault().ISBN"></label>
+                        </th>
+                        <th>
 
                         </th>
                     </tr>
                     @foreach (var item in Model.Books)
                     {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(m => item.Name)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(m => item.Author)
-                            </td>
-                            <td>
-                                <button class="btn btn-danger btn-sm text-white">Delete</button>
-                                <a class="btn btn-success btn-sm text-white">Edit</a>
-                            </td>
-                            
-                        </tr>
+                <tr>
+                    <td>
+                        @Html.DisplayFor(m => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(m => item.Author)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(m => item.ISBN)
+                    </td>
+                    <td>
+                        <button class="btn btn-danger btn-sm text-white">Delete</button>
+                        <a class="btn btn-success btn-sm text-white">Edit</a>
+                    </td>
+
+                </tr>
                     }
                 </table>
             }
