--- a/BookListRazor/Pages/BookList/Create.cshtml
+++ b/BookListRazor/Pages/BookList/Create.cshtml
@@ -4,5 +4,48 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<br/>
+<h2 class="text-info">Create New Book</h2> 
+<br/>
+
+<div class="border container" style="padding:30px;">
+    <form method="post">
+        <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+        <div class="form-check-group row">
+            <div class="col-4">
+                <label asp-for="Book.Name"></label>
+            </div>
+            <div class="col-6">
+                <input asp-for="Book.Name" class="form-control" />
+            </div>
+            <span asp-validation-for="Book.Name" class="text-danger"></span>
+        </div><br />
+        <div class="form-check-group row">
+            <div class="col-4">
+                <label asp-for="Book.Author"></label>
+            </div>
+            <div class="col-6">
+                <input asp-for="Book.Author" class="form-control" />
+            </div>
+            <span asp-validation-for="Book.Author" class="text-danger"></span>
+        </div><br />
+        <div class="form-check-group row">
+            <div class="col-4">
+                <label asp-for="Book.ISBN"></label>
+            </div>
+            <div class="col-6">
+                <input asp-for="Book.ISBN" class="form-control" />
+            </div>
+            <span asp-validation-for="Book.ISBN" class="text-danger"></span>
+        </div><br />
+        <div class="form-group row">
+            <div class="col-lg-3 offset-4">
+                <input type="submit" value="Create" class="btn btn-primary form-check-control" />
+            </div>
+            <div class="col-3">
+                <a asp-page="Index" class="btn btn-success form-control">Back to List</a>
+            </div>
+        </div>
+    </form>
+</div>
 
