--- a/BookListRazor/Pages/BookList/Edit.cshtml
+++ b/BookListRazor/Pages/BookList/Edit.cshtml
@@ -1,12 +1,10 @@
 ﻿@page
-@model BookListRazor.Pages.BookList.CreateModel
-@{
-    ViewData["Title"] = "Create";
-}
+@model BookListRazor.Pages.BookList.EditModel
 
-<br/>
-<h2 class="text-info">Create New Book</h2> 
-<br/>
+
+<br />
+<h2 class="text-info">Edit Book</h2>
+<br />
 
 <div class="border container" style="padding:30px;">
     <form method="post">
@@ -40,7 +38,7 @@
         </div><br />
         <div class="form-group row">
             <div class="col-lg-3 offset-4">
-                <input type="submit" value="Create" class="btn btn-primary form-check-control" />
+                <input type="submit" value="Update" class="btn btn-primary form-check-control" />
             </div>
             <div class="col-3">
                 <a asp-page="Index" class="btn btn-success form-control">Back to List</a>
@@ -52,4 +50,3 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
-
